--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
       <a href="merch.html">商品</a>
       <a href="calendar.html">日程</a>
     </nav>
-    <a href="_test_.html">
+    <a href="test.html">
       <button class="lang-switch">English</button>
     </a>
   </header>
