--- a/test.html
+++ b/test.html
@@ -405,7 +405,7 @@
       <a href="merch.html">Merch</a>
       <a href="calendar.html">Calendar</a>
     </nav>
-    <a href="_main_.html">
+    <a href="index.html">
       <button class="lang-switch">中文</button>
     </a>
 
